# retail-demand-analytics-portfolio

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: portfolio_snapshot.md
scripts/: run_pipeline.py
sql/: business_questions.sql
src/retail_analytics/: __init__.py  data_generator.py  insights.py  pipeline.py
tests/: test_pipeline.py
